--- a/UI/static/css/asheuh-framework.css
+++ b/UI/static/css/asheuh-framework.css
@@ -10,13 +10,20 @@
 Navbar
 ------
 */
+.header {
+    height: 53px;
+}
 
 .myNavbar ul.myNav {
     list-style-type: none;
     margin: 0;
+    width: 100%;
+    position: fixed;
+    background-color: #FAFAFA;
     padding: 0;
-    height: 43px;
+    height: 53px;
     overflow: hidden;
+    border-bottom: 1px solid #f1f1f1;
 }
 
 .myNavbar ul.myNav li {
@@ -134,10 +141,11 @@ sidebar navigation
     margin: 0;
     padding: 0;
     width: 15%;
-    background-color: #17202A;
+    background-color: #D1F2EB;
     position: fixed;
     height: 100%;
     overflow: auto;
+    border-right: 1px solid #ABB2B9;
 }
 
 .asheuh-sidenav ul {
@@ -149,25 +157,26 @@ sidebar navigation
 
 .asheuh-sidenav ul li a {
     display: block;
-    color: #CACFD2;
+    color: rgb(25, 54, 50);
     padding: 8px 16px;
     text-decoration: none;
 }
 
 .asheuh-sidenav ul li a.active {
-    background-color: gold;
+    background-color: #F4F6F6;
     color: black;
 }
 
 .asheuh-sidenav ul li a:hover:not(.active) {
-    background-color: #34495E;
-    color: white;
+    background-color: #D6EAF8;
+    color: black;
 }
 
-div.content {
+.content {
     margin-left: 15%;
     padding: 1px 16px;
     height: 100%;
+    width: 85%;
 }
 
 
@@ -183,7 +192,7 @@ div.content {
         float: left;
         padding: 15px;
     }
-    div.content {
+    .content {
         margin-left: 0;
     }
 }
@@ -264,6 +273,7 @@ Grid system
 -----------
 */
 
+.span-col-2{grid-column: span 2 / auto;}
 .span-col-3{grid-column: span 3 / auto;}
 .span-col-4{grid-column: span 4 / auto;}
 .span-col-5{grid-column: span 5 / auto;}
@@ -272,7 +282,6 @@ Grid system
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-gap: 10px;
-    width: 100%;
 }
 
 @media all and (max-width: 900px) {
@@ -287,7 +296,6 @@ Grid system
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 10px;
-    width: 100%;
 }
 
 @media all and (max-width: 900px) {
@@ -302,7 +310,6 @@ Grid system
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
-    width: 100%;
 }
 
 @media all and (max-width: 900px) {
@@ -317,7 +324,6 @@ Grid system
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
-    width: 100%;
 }
 
 @media all and (max-width: 900px) {
@@ -325,6 +331,10 @@ Grid system
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 10px;
+        width: 100%;
+    }
+    .side-grid {
+        display: none;
     }
 }
 
@@ -332,7 +342,6 @@ Grid system
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
-    width: 100%;
 }
 
 @media all and (max-width: 900px) {
@@ -347,7 +356,6 @@ Grid system
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 10px;
-    width: 100%;
 }
 
 @media all and (max-width: 900px) {
