--- a/UI/static/css/asheuh-framework.css
+++ b/UI/static/css/asheuh-framework.css
@@ -265,6 +265,16 @@ containers
     margin: auto;
 }
 
+@media screen and (max-width: 900px) {
+    .my-container-fluid {
+        width: 100%;
+        margin: auto;
+    }
+    .my-container {
+        width: 100%;
+        margin: auto;
+    }
+}
 
 /*
 
@@ -471,6 +481,7 @@ input[type=password] {
     border: 1px solid #80808049;
     background: white;
 }
+
 
 input[type=text]:focus,
 input[type=password]:focus {
