--- a/UI/static/css/style.css
+++ b/UI/static/css/style.css
@@ -373,3 +373,23 @@ h3 {
     margin-top: 4em;
     margin-bottom: 2em;
 }
+
+.content .scontainer textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px;
+    box-sizing: border-box;
+    border: 1px solid #80808049;
+    border-radius: 5px;
+    background-color: white;
+    resize: none;
+}
+
+.content .scontainer textarea:focus {
+    outline: none;
+    border: 1.5px solid #7ac9b7;
+}
+
+.content form {
+    width: 100%;
+}
