#159643053 add form for user to post answers to questions

--- a/UI/templates/mains/post_question.html
+++ b/UI/templates/mains/post_question.html
@@ -19,10 +19,9 @@
                 <ul class="myNav">
                     <div class="my-container">
                         <li>
-                            <a style="font-size: 22px; color: gold;" href="index.html"><span class="smallerFont">Stackoverflow</span>LITE<sup><small>2018</small></sup></a>
+                            <a style="font-size: 22px; color: gold;" href="../../../index.html"><span class="smallerFont">Stackoverflow</span>LITE<sup><small>2018</small></sup></a>
                         </li>
-                        <li class="right"><a href="UI/templates/mains/signin.html"> Login</a></li>
-                        <li class="right"><a href="UI/templates/mains/signup.html"> Signup</a></li>
+                        <li class="right"><a href="#"> Username</a></li>
                     </div>
                 </ul>
             </div>
