--- a/UI/static/css/style.css
+++ b/UI/static/css/style.css
@@ -390,6 +390,71 @@ h3 {
     border: 1.5px solid #7ac9b7;
 }
 
+.content .scontainer {
+    padding: 16px;
+}
+
 .content form {
     width: 100%;
+}
+
+.summary .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    text-align: center;
+}
+
+.summary .modal .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto;
+    border: 1px solid #888;
+    width: 30%;
+    border-radius: 5px;
+}
+
+.summary .modal .animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+@media screen and (max-width: 1093px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .summary .modal .modal-content .container .cancelbtn {
+        width: 100%;
+    }
+    .summary .modal .modal-content {
+        background-color: #fefefe;
+        margin: 5% auto 15% auto;
+        border: 1px solid #888;
+        width: 80%;
+    }
 }
