--- a/UI/templates/mains/menu.html
+++ b/UI/templates/mains/menu.html
@@ -4,9 +4,8 @@
     </div>
 
     <ul class="menu">
-        <li><a href="index.html" class="active"> Home/Popular questions</a></li>
-        <li><a href="#" class="side-link link">All guestions</a></li>
-        <li class="link"><a href="#">Recent questions</a></li>
+        <li><a href="home.html" class="active"> Home/Recent Questions</a></li>
+        <li><a href="allquestions.html" class="side-link link">All Questions</a></li>
         <li><a href="users.html" class="side-link link"> Users</a></li>
     </ul>
     <div class="hide">
@@ -17,37 +16,37 @@
         <ul class="menu">
             <li>
                 <a href="#" class="side-link"> 
-                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="UI/static/images/asheuh.jpeg">
+                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
                     <p style="margin-top: -1.8em; margin-left: 2.5em;">Bryan Mboya</p>
                 </a>
             </li>
             <li>
                 <a href="#" class="side-link"> 
-                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="UI/static/images/asheuh.jpeg">
+                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
                     <p style="margin-top: -1.8em; margin-left: 2.5em;">Paullette Mboya</p>
                 </a>
             </li>
             <li>
                 <a href="#" class="side-link"> 
-                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="UI/static/images/asheuh.jpeg">
+                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
                     <p style="margin-top: -1.8em; margin-left: 2.5em;">Stacy Mboya</p>
                 </a>
             </li>
             <li>
                 <a href="#" class="side-link"> 
-                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="UI/static/images/asheuh.jpeg">
+                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
                     <p style="margin-top: -1.8em; margin-left: 2.5em;">Jack Bryan</p>
                 </a>
             </li>
             <li>
                 <a href="#" class="side-link"> 
-                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="UI/static/images/asheuh.jpeg">
+                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
                     <p style="margin-top: -1.8em; margin-left: 2.5em;">Avril Mboya</p>
                 </a>
             </li>
             <li>
                 <a href="#" class="side-link"> 
-                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="UI/static/images/asheuh.jpeg">
+                    <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
                     <p style="margin-top: -1.8em; margin-left: 2.5em;">Chessi Thifa</p>
                 </a>
             </li>
