--- a/UI/templates/mains/usermenu.html
+++ b/UI/templates/mains/usermenu.html
@@ -4,8 +4,8 @@
     </div>
 
     <ul class="menu">
-        <li><a href="../../../index.html" class="active"> Home/Popular questions</a></li>
-        <li><a href="../mains/userquestions.html" class="side-link link">My Questions</a></li>
+        <li><a href="home.html" class="active"> Home/Recent questions</a></li>
+        <li><a href="userquestions.html" class="side-link link">My Questions</a></li>
         <li><a href="users.html" class="side-link link"> Users</a></li>
         <li><a href="userprofile.html" class="side-link link"> Profile</a></li>
     </ul>
