--- a/UI/templates/mains/userquestions.html
+++ b/UI/templates/mains/userquestions.html
@@ -19,15 +19,19 @@
                 <ul class="myNav">
                     <div class="my-container">
                         <li>
-                            <a style="font-size: 22px; color: gold;" href="../../../index.html"><span class="smallerFont">Stackoverflow</span>LITE<sup><small>2018</small></sup></a>
+                            <a style="font-size: 22px; color: gold;" href="home.html"><span class="smallerFont">Stackoverflow</span>LITE<sup><small>2018</small></sup></a>
                         </li>
-                        <li class="right"><a href="#"> Username</a></li>
+                        <li class="right">
+                            <a href="userprofile.html">
+                                <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
+                            </a>
+                        </li>
                     </div>
                 </ul>
             </div>
         </nav>
     </header>
-    <div include-html="../../templates/mains/usermenu.html"></div>
+    <div include-html="usermenu.html"></div>
     <script>
         includeHTML();
     </script>
