--- a/UI/templates/mains/userprofile.html
+++ b/UI/templates/mains/userprofile.html
@@ -19,9 +19,13 @@
                 <ul class="myNav">
                     <div class="my-container">
                         <li>
-                            <a style="font-size: 22px; color: gold;" href="../../../index.html"><span class="smallerFont">Stackoverflow</span>LITE<sup><small>2018</small></sup></a>
+                            <a style="font-size: 22px; color: gold;" href="home.html"><span class="smallerFont">Stackoverflow</span>LITE<sup><small>2018</small></sup></a>
                         </li>
-                        <li class="right"><a href="#"> Username</a></li>
+                        <li class="right">
+                            <a href="userprofile.html">
+                                <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
+                            </a>
+                        </li>
                     </div>
                 </ul>
             </div>
@@ -133,7 +137,7 @@
                                                         <div class="summary">
                                                             <h4>Total views</h4>
                                                             <h5><a href="#">18</a></h5>
-                                                            <a href="UI/templates/mains/details.html" class="btn btn-primary">view details</a>
+                                                            <a href="details.html" class="btn btn-primary">view details</a>
                                                         </div>
                                                         <div class="summary">
                                                             <a href="#" class="btn btn-danger">Delete</a>
