--- a/UI/templates/mains/menu.html
+++ b/UI/templates/mains/menu.html
@@ -1,6 +1,6 @@
 <div class="asheuh-sidenav">
     <div id="brand">
-        <h3 class="side-link"><a href="index.html">Stackoverflow&#x2606;Lite</a></h3>
+        <h3 class="side-link"><a href="home.html">Stackoverflow&#x2606;Lite</a></h3>
     </div>
 
     <ul class="menu">
