--- a/UI/templates/mains/userquestions.html
+++ b/UI/templates/mains/userquestions.html
@@ -22,6 +22,11 @@
                             <a style="font-size: 22px; color: gold;" href="home.html"><span class="smallerFont">Stackoverflow</span>LITE<sup><small>2018</small></sup></a>
                         </li>
                         <li class="right">
+                            <a href="signin.html">
+                                <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/logout-rounded-filled.png">
+                            </a>
+                        </li>
+                        <li class="right">
                             <a href="userprofile.html">
                                 <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
                             </a>
@@ -80,10 +85,10 @@
                                     <div class="summary">
                                         <h4>Total views</h4>
                                         <h5><a href="#">18</a></h5>
-                                        <a href="UI/templates/mains/details.html" class="btn btn-primary">view details</a>
+                                        <a href="details.html" class="btn btn-primary">view details</a>
                                     </div>
                                     <div class="summary">
-                                        <a href="#" class="btn btn-danger">Delete</a>
+                                        <a href="#" class="btn btn-danger">Delete Question</a>
                                     </div>
 
                                 </div>
