--- a/UI/templates/mains/post_question.html
+++ b/UI/templates/mains/post_question.html
@@ -22,6 +22,11 @@
                             <a style="font-size: 22px; color: gold;" href="home.html"><span class="smallerFont">Stackoverflow</span>LITE<sup><small>2018</small></sup></a>
                         </li>
                         <li class="right">
+                            <a href="signin.html">
+                                <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/logout-rounded-filled.png">
+                            </a>
+                        </li>
+                        <li class="right">
                             <a href="userprofile.html">
                                 <img class="image" style="border-radius: 50%; width: 30px; height: 30px;" src="../../static/images/asheuh.jpeg">
                             </a>
