--- a/UI/templates/mains/allquestions.html
+++ b/UI/templates/mains/allquestions.html
@@ -114,7 +114,7 @@
                                     <div class="summary">
                                         <h4>Total answers</h4>
                                         <h5><a href="#">0</a></h5>
-                                        <a href="UI/templates/mains/addanswer.html" class="btn btn-success">post answer</a>
+                                        <a href="#" class="btn btn-success">post answer</a>
                                     </div>
                                     <div class="summary">
                                         <h4>Total votes</h4>
@@ -124,7 +124,7 @@
                                     <div class="summary">
                                         <h4>Total views</h4>
                                         <h5><a href="#">18</a></h5>
-                                        <a href="UI/templates/mains/details.html" class="btn btn-primary">view details</a>
+                                        <a href="details.html" class="btn btn-primary">view details</a>
                                     </div>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@
                                     <div class="summary">
                                         <h4>Total answers</h4>
                                         <h5><a href="#">0</a></h5>
-                                        <a href="UI/templates/mains/addanswer.html" class="btn btn-success">post answer</a>
+                                        <a href="#" class="btn btn-success">post answer</a>
                                     </div>
                                     <div class="summary">
                                         <h4>Total votes</h4>
@@ -162,7 +162,7 @@
                                     <div class="summary">
                                         <h4>Total views</h4>
                                         <h5><a href="#">18</a></h5>
-                                        <a href="UI/templates/mains/details.html" class="btn btn-primary">view details</a>
+                                        <a href="details.html" class="btn btn-primary">view details</a>
                                     </div>
                                 </div>
                             </div>
@@ -190,7 +190,7 @@
                                     <div class="summary">
                                         <h4>Total answers</h4>
                                         <h5><a href="#">0</a></h5>
-                                        <a href="UI/templates/mains/addanswer.html" class="btn btn-success">post answer</a>
+                                        <a href="#" class="btn btn-success">post answer</a>
                                     </div>
                                     <div class="summary">
                                         <h4>Total votes</h4>
@@ -200,7 +200,7 @@
                                     <div class="summary">
                                         <h4>Total views</h4>
                                         <h5><a href="#">18</a></h5>
-                                        <a href="UI/templates/mains/details.html" class="btn btn-primary">view details</a>
+                                        <a href="details.html" class="btn btn-primary">view details</a>
                                     </div>
                                 </div>
                             </div>
@@ -228,7 +228,7 @@
                                     <div class="summary">
                                         <h4>Total answers</h4>
                                         <h5><a href="#">0</a></h5>
-                                        <a href="UI/templates/mains/addanswer.html" class="btn btn-success">post answer</a>
+                                        <a href="#" class="btn btn-success">post answer</a>
                                     </div>
                                     <div class="summary">
                                         <h4>Total votes</h4>
@@ -238,7 +238,7 @@
                                     <div class="summary">
                                         <h4>Total views</h4>
                                         <h5><a href="#">18</a></h5>
-                                        <a href="UI/templates/mains/details.html" class="btn btn-primary">view details</a>
+                                        <a href="details.html" class="btn btn-primary">view details</a>
                                     </div>
                                 </div>
                             </div>
