--- a/UI/static/css/style.css
+++ b/UI/static/css/style.css
@@ -296,74 +296,154 @@ h3 {
 }
 
 
-.month {
-    padding: 20px 25px;
-    width: 100%;
-    background: #1abc9c;
-    text-align: center;
-}
-
-.cal {
-    width: 80%;
-}
-
-.month ul {
-    margin: 0;
-    padding: 0;
-}
-
-.month ul li {
-    color: white;
-    font-size: 20px;
+.side-grid .cal .month {
+    background: #cd310d;
+    cursor: default;
+    background: -moz-linear-gradient(top, #b32b0c, #cd310d);
+    background: -webkit-gradient(linear, left top, left bottom, from(#b32b0c), to(#cd310d));
+    height: 34px;
+    position: relative;
+    color: #fff;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-weight: bold;
+    text-shadow: 0px -1px 0 #87260c;
     text-transform: uppercase;
-    letter-spacing: 3px;
 }
 
-.month .prev {
-    float: left;
-    padding-top: 10px;
-}
-
-.month .next {
-    float: right;
-    padding-top: 10px;
-}
-
-.weekdays {
-    margin: 0;
-    padding: 10px 0;
-    background-color: #ddd;
-}
-
-.weekdays li {
+.side-grid .cal .month span {
     display: inline-block;
-    width: 10.6%;
-    color: #666;
+    line-height: 34px;
+}
+
+.side-grid .cal .hook {
+    width: 9px;
+    height: 20px;
+    position: absolute;
+    bottom: 60%;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    background: #ececec;
+    background: -moz-linear-gradient(right top, #fff, #827e7d);
+    background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
+    box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+    -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+    -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+}
+
+.side-grid .cal .month .right.hook {
+    right: 15%;
+}
+
+.side-grid .cal .month .left.hook {
+    left: 15%;
+}
+
+.side-grid .cal .month .button {
+    width: 24px;
+    text-align: center;
+    position: absolute;
+}
+
+.side-grid .cal .month .button:hover {
+    background: -moz-linear-gradient(top, #d94215, #bb330f);
+    background: -webkit-gradient(linear, left top, left bottom, from(#d94215), to(#bb330f));
+}
+
+.side-grid .cal .month .right.button {
+    right: 0;
+    top: 0;
+    border-left: 1px solid #ae2a0c;
+    border-top-right-radius: 5px;
+    -moz-border-radius-topright: 5px;
+    -webkit-border-top-right-radius: 5px;
+}
+
+.side-grid .cal .month .left.button {
+    left: 0;
+    border-right: 1px solid #ae2a0c;
+    border-top-left-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -webkit-border-top-left-radius: 5px;
+}
+
+.side-grid .cal .month .month-year {
+    letter-spacing: 1px;
+    width: 100%;
     text-align: center;
 }
 
-.days {
-    padding: 10px 0;
-    background: #eee;
-    margin: 0;
+.side-grid .cal table {
+    background: #FAFAFA;
+    border-collapse: collapse;
 }
 
-.days li {
-    list-style-type: none;
-    display: inline-block;
-    width: 10.6%;
+.side-grid .cal td {
+    color: #2d2d2d;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
     text-align: center;
-    margin-bottom: 5px;
-    font-size:12px;
-    color: #777;
+    border: 1px solid #e6e6e6;
+    cursor: default;
 }
 
-.days li .active {
-    padding: 5px;
-    background: #1abc9c;
-    color: white !important
+.side-grid .cal #days td {
+    height: 26px;
+    line-height: 26px;
+    text-transform: uppercase;
+    font-size: 85%;
+    color: #000;
 }
 
+.side-grid .cal #days td:not(:last-child) {
+    border-right: 1px solid #FAFAFA;
+}
+
+.side-grid .cal .cal-frame td.today {
+    background: #E8E3E3;
+    color: #8c8c8c8;
+    box-shadow: 1px 1px 0px #FAFAFA inset;
+    -moz-box-shadow: 1px 1px 0px #FAFAFA inset;
+    -webkit-box-shadow: 1px 1px 0px #FAFAFA inset;
+}
+
+.side-grid .cal .cal-frame td:not(.nil):hover {
+    color: #fff;
+    text-shadow: #6c1a07 0px -1px;
+    background: #cd310d;
+    background: -moz-linear-gradient(top, #b32b0c, #cd310d);
+    background: -webkit-gradient(linear, left top, left bottom, from(#b32b0c), to(#cd310d));
+    box-shadow: 0px 0px 0px;
+    -moz-box-shadow: 0px 0px 0px;
+    -webkit-box-shadow: 0px 0px 0px;
+}
+
+.side-grid .cal .cal-frame td span {
+    font-size: 80%;
+    position: relative;
+}
+
+.side-grid .cal .cal-frame td span:first-child {
+    bottom: 5px;
+}
+
+.side-grid .cal .cal-frame td span:last-child {
+    top: 5px;
+}
+
+.side-grid .cal {
+    font: 13px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    display: table;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+}
 
 /* Add media queries for smaller screens */
 @media screen and (max-width:720px) {
