Host the UI to on github pages

--- a/UI/templates/mains/menu.html
+++ b/UI/templates/mains/menu.html
@@ -7,6 +7,7 @@
         <li><a href="home.html" class="active"> Home/Recent Questions</a></li>
         <li><a href="allquestions.html" class="side-link link">All Questions</a></li>
         <li><a href="users.html" class="side-link link"> Users</a></li>
+        <li><a href="userprofile.html" class="side-link link"> Profile</a></li>
     </ul>
     <div class="hide">
         <ul class="menu">
